# Secure-coding

./: .gitignore  CMakeLists.txt  README.md  SecureAuthCPP  makedirectory.sh
src/: main.cpp
src/Authentication/: AuthManager.cpp  AuthManager.h
src/Config/: Config.cpp  Config.h
src/FileIO/: FileManager.cpp  FileManager.h
src/Hashing/: Hasher.cpp  Hasher.h
src/Models/: User.h  UserLockData.h  UserLockedData.cpp
src/Utils/: Logger.h  TimeUtils.cpp  TimeUtils.h
